motive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motive-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - motivedns.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: motivedns.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /hello-world-one(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
          - path: /hello-world-two(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ingress-demo
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
